styling: fixed skills styling and added a wrapped container around all sub-sections

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -24,23 +24,23 @@ button {
     cursor: pointer;
 }
 
-.container {
-    width: 80%;
-    padding: 5% 0;
-    margin: auto;
-    display: block;
-}
-
 .sectionHeading {
     display: inline-block;
     color: $accentGreen;
     border-bottom: 4px $accentGreen solid;
-    margin: 3rem 0;
-    padding: 0 3rem;
-    line-height: 3rem;
+    margin: 3rem 0 1.5rem 0;
+    padding: 0 1rem;
+    line-height: 2.5rem;
 }
 
 .sectionContent {
     width: 90%;
     margin: auto;
+}
+
+.container {
+    width: 80%;
+    padding: 5% 0;
+    margin: auto;
+    display: block;
 }
