--- a/styles/components/_skills.scss
+++ b/styles/components/_skills.scss
@@ -1,15 +1,13 @@
 #skills {
-    p,
-    h4 {
+    li {
         color: $primaryWhite;
+        padding: 1% 0;
+        list-style: none;
     }
 
     p {
+        color: $primaryWhite;
         margin-bottom: 1rem;
-    }
-
-    h4 {
-        padding: 1% 0;
     }
 }
 
@@ -27,7 +25,7 @@
     margin: 2% 2% 2% 0;
 
     h3 {
-        color: rgb(103, 163, 111);
+        color: $accentGreen;
         margin-bottom: 2%;
     }
 }
@@ -37,12 +35,7 @@
         display: grid;
         grid-template-rows: auto auto;
         grid-template-columns: auto auto;
-    }
-}
-
-@media only screen and (max-width: 514px) and (-webkit-min-device-pixel-ratio: 1) {
-    #skills h2 {
-        padding-top: 8%;
+        margin: auto 30%;
     }
 }
 
@@ -51,6 +44,7 @@
         display: grid;
         grid-template-rows: auto;
         grid-template-columns: auto;
+        margin: auto 30%;
     }
 
     .skillCategory {
